--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
   --primary-color: #ee1809;
@@ -96,7 +96,7 @@ body {
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 nav {
@@ -167,10 +167,10 @@ nav {
   display: flex;
   align-items: center;
   gap: 10px;
-  font-size: 1.9rem;
-  font-weight: 600;
+  font-size: 4.9rem;
+  font-weight: 700;
   color: #080301;
-  background-color: #fff8f5;
+ 
   border-radius: 5rem;
 }
 
@@ -211,7 +211,7 @@ nav {
   display: flex;
   align-items: center;
   gap: 30px;
-  font-size: 1rem;
+  font-size: 0.5rem;
   font-weight: 500;
   color: var(--text-dark);
 }
@@ -346,179 +346,132 @@ body {
 
 
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
-.explore__card:nth-child(1) span {
-  color: #f04a0c;
-  background-color: #f6efef;
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.wrapper{
+    font-family: 'poppins',sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #fafafa;
+}
+.wrapper h1{
+    font-size: 3em;
+    color: #000000;
+    margin: 25px;
+}
+.content-box{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 1000px;
+    margin-top: 30px;
+    
+}
+.card{
+    min-height: 220px;
+    width: 320px;
+    padding: 30px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #fff;
+    margin: 10px 4px;
+    box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2);
+}
+.card i{
+    margin: 20px;
+    color: #ff5724;
+}
+.card h2{
+    margin-bottom: 12px;
+    font-weight: 800;
+    color: #000000;
+    text-align: center;
+}
+.card p{
+    color: #000000;
+    text-align: center;
+}
+.card:hover i,
+.card:hover p{
+    color: #fff;
+}
+.card:hover h2{
+    font-weight: 800;
+    color: #000000;
+    
+}
+.card:nth-child(1):hover{
+    background: linear-gradient(45deg,
+                                   rgba(225,28,8,0.8) 0% ,
+                                   rgba(225,0,82,0.8)100% ) ,
+                                    url('bg.jpg');
+                                    background-size: cover;
+}
+.card:nth-child(2):hover{
+    background: linear-gradient(45deg,
+                                   rgba(225,28,8,0.8) 0% ,
+                                   rgba(225,0,82,0.8)100% ) ,
+                                    url('bg2.jpg');
+                                    background-size: cover;
+}
+.card:nth-child(3):hover{
+    background: linear-gradient(45deg,
+                                   rgba(225,28,8,0.8) 0% ,
+                                   rgba(225,0,82,0.8)100% ) ,
+                                    url('bg3.jpg');
+                                    background-size: cover;
+}
+.card:nth-child(4):hover{
+    background: linear-gradient(45deg,
+                                   rgba(225,28,8,0.8) 0% ,
+                                   rgba(225,0,82,0.8)100% ) ,
+                                    url('bg4.jpg');
+                                    background-size: cover;
+}
+.card:nth-child(5):hover{
+    background: linear-gradient(45deg,
+                                   rgba(225,28,8,0.8) 0% ,
+                                   rgba(225,0,82,0.8)100% ) ,
+                                    url('bg5.jpg');
+                                    background-size: cover;
+}
+.card:nth-child(6):hover{
+    background: linear-gradient(45deg,
+                                   rgba(225,28,8,0.8) 0% ,
+                                   rgba(225,0,82,0.8)100% ) ,
+                                    url('bg2.jpg');
+                                    background-size: cover;
+}
+@media(max-width:991px){
+    .wrapper{
+        padding: 25px;
+    }
+    .wrapper h1{
+        font-size: 2.5em;
+        font-weight: 600;
+    }
+    .content-box{
+        flex-direction: column;
+        width: 100%;
+    }
+    .card{
+        min-width: 300px;
+        margin: 10px auto;
+    }
 }
 
-.explore__card:nth-child(2) span {
-  color: #6a38c2;
-  background-color: #e9ddff;
-}
 
-.explore__card:nth-child(3) span {
-  color: #ff0101;
-  background-color: #fff2f2;
-}
-
-.explore__card:nth-child(4) span {
-  color: #fbbc09;
-  background-color: #fff8e3;
-}
-
-.explore__card:nth-child(5) span {
-  color: #4680e7;
-  background-color: #e7edf8;
-}
-
-.explore__card:nth-child(6) span {
-  color: #34a753;
-  background-color: #f1fef5;
-}
-
-.explore__card:nth-child(7) span {
-  color: #443ee0;
-  background-color: #f6f5ff;
-}
-
-.explore__card:nth-child(8) span {
-  color: #3ac2ba;
-  background-color: #f0fffe;
-}
-
-.explore__card:hover span {
-  color: var(--white);
-  background-color: #794cc7;
-}
-
-.explore__card h4 {
-  margin-bottom: 0.5rem;
-  font-size: 1.2rem;
-  font-weight: 700;
-  color: var(--text-dark);
-  transition: 0.3s;
-}
-
-.explore__card p {
-  color: var(--text-light);
-  transition: 0.3s;
-}
-
-.explore__card:hover h4 {
-  color: var(--white);
-}
-
-.explore__card:hover p {
-  color: var(--extra-light);
-}
-
-.explore__btn {
-  text-align: center;
-}
-
-.job__grid {
-  margin-top: 4rem;
-  display: grid;
-  gap: 1rem;
-}
-
-.job__card {
-  padding: 1rem;
-  border-radius: 5px;
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
-  transition: 0.3s;
-}
-
-.job__card:hover {
-  background-color: var(--primary-color);
-}
-
-.job__card__header {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.job__card img {
-  max-width: 50px;
-  padding: 10px;
-  border-radius: 100%;
-  background-color: var(--white);
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-.job__card h5 {
-  font-size: 1.1rem;
-  font-weight: 600;
-  color: var(--text-dark);
-  transition: 0.3s;
-}
-
-.job__card h6 {
-  font-size: 0.9rem;
-  font-weight: 500;
-  color: var(--text-light);
-  transition: 0.3s;
-}
-
-.job__card h4 {
-  margin-block: 1rem 0.5rem;
-  font-size: 1.2rem;
-  font-weight: 700;
-  color: var(--text-dark);
-  transition: 0.3s;
-}
-
-.job__card p {
-  margin-bottom: 1rem;
-  color: var(--text-light);
-  transition: 0.3s;
-}
-
-.job__card__footer {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 5px;
-}
-
-.job__card__footer span {
-  display: inline-block;
-  padding: 4px 10px;
-  font-size: 0.8rem;
-  font-weight: 500;
-  border-radius: 5px;
-  transition: 0.3s;
-}
-
-.job__card__footer span:nth-child(1) {
-  color: #4680e7;
-  background-color: #e7edf8;
-}
-
-.job__card__footer span:nth-child(2) {
-  color: #f04a0c;
-  background-color: #f6efef;
-}
-
-.job__card__footer span:nth-child(3) {
-  color: #3ac2ba;
-  background-color: #f0fffe;
-}
-
-.job__card:hover :is(h5, h4) {
-  color: var(--white);
-}
-
-.job__card:hover :is(h6, p) {
-  color: var(--extra-light);
-}
-
-.job__card:hover .job__card__footer span {
-  color: var(--white);
-  background-color: var(--primary-color-dark);
-}
 
 .offer__grid {
   margin-top: 4rem;
