--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 \*-----------------------------------*/
 
 /**
- * copyright 2022 codewithsadee
+ * copyright 2025 codesWithQamar
  */
 
 
@@ -20,10 +20,10 @@
    * colors
    */
 
-  --safety-orange: hsl(25, 100%, 50%);
+  --safety-orange: hsl(0, 0%, 0%);
   --lavender-gray: hsl(230, 19%, 81%);
-  --persian-rose: hsl(328, 100%, 59%);
-  --red-crayola: hsl(341, 100%, 49%);
+  --persian-rose: hsl(0, 100%, 93%);
+  --red-crayola: hsl(0, 0%, 0%);
   --eerie-black: hsl(240, 6%, 10%);
   --light-gray: hsl(0, 0%, 80%);
   --cultured-2: hsl(210, 60%, 98%);
@@ -603,7 +603,7 @@ body {
 
 .input-field {
   background-color: var(--white-2);
-  color: var(--eerie-black);
+  color:black;
   font-size: var(--fs-5);
   padding: 15px;
   border-radius: var(--radius-2);
@@ -614,7 +614,7 @@ body {
 
 .input-field::-webkit-inner-spin-button { display: none; }
 
-.input-field:focus { outline-color: var(--red-crayola); }
+.input-field:focus { outline-color: var(--black); }
 
 .input-field::placeholder { transition: var(--transition-1); }
 
@@ -631,12 +631,12 @@ textarea.input-field {
 .checkbox {
   width: max-content;
   margin-block-start: 5px;
-  accent-color: var(--red-crayola);
+  accent-color: black;
 }
 
 .label-link {
   display: inline-block;
-  color: var(--red-crayola);
+  color: black;
 }
 
 .label-link:is(:hover, :focus) { text-decoration: underline; }
@@ -671,7 +671,7 @@ textarea.input-field {
 
 .contact-card .card-icon {
   background-color: var(--cultured-2);
-  color: var(--red-crayola);
+  color: black;
   font-size: 25px;
   padding: 13px;
   border-radius: 50%;
@@ -679,7 +679,7 @@ textarea.input-field {
 }
 
 .contact-card:is(:hover, :focus) .card-icon {
-  background-color: var(--red-crayola);
+  background-color: black;
   color: var(--white-1);
 }
 
@@ -690,7 +690,7 @@ textarea.input-field {
   transition: var(--transition-1);
 }
 
-.contact-card .card-link:is(:hover, :focus) { color: var(--red-crayola); }
+.contact-card .card-link:is(:hover, :focus) { color:black }
 
 
 
