--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-  --primary-color: #ee1809;
-  --primary-color-dark: rgba(25, 223, 58, 0.5);
+  --primary-color:  #000000;
+  --primary-color-dark: rgba(0, 0, 0, 0.5);
   --text-dark: #262626;
   --text-light: #737373;
   --extra-light: #e5e5e5;
@@ -61,7 +61,7 @@
 
 .btn:hover {
   background-color: var(--primary-color-dark);
-  box-shadow: 2px 2px 10px rgba(233, 72, 72, 0.5);
+  box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.5);
 }
 
 .logo {
@@ -226,7 +226,7 @@ nav {
 }
 
 .header__btns a:hover span {
-  box-shadow: 2px 2px 10px rgba(233, 107, 5, 0.5);
+  box-shadow: 2px 2px 10px rgba(5, 3, 1, 0.5);
 }
 
 .header__container > img {
@@ -390,7 +390,7 @@ body {
 }
 .card i{
     margin: 20px;
-    color: #ff5724;
+    color: #070403;
 }
 .card h2{
     margin-bottom: 12px;
@@ -497,7 +497,7 @@ body {
 }
 
 .client__ratings span {
-  color: goldenrod;
+  color: rgb(0, 0, 0);
 }
 
 .client__card h4 {
