--- a/price.css
+++ b/price.css
@@ -1,83 +1,364 @@
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+:root {
+  --primary-color:  #000000;
+  --primary-color-dark: rgba(0, 0, 0, 0.5);
+  --text-dark: #000000;
+  --text-light: #000000;
+  --extra-light: #000000;
+  --white: #ffffff;
+  --max-width: 1200px;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.section__container {
+  max-width: var(--max-width);
+  margin: auto;
+  padding: 5rem 1rem;
+}
+
+.section__header {
+  max-width: 900px;
+  margin-inline: auto;
+  margin-bottom: 1rem;
+  font-size: 4.5rem;
+  font-weight: 700;
+  color: var(--text-dark);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+}
+
+.section__header span {
+  color: var(--primary-color);
+}
+
+.section__description {
+  max-width: 600px;
+  margin-inline: auto;
+  color: var(--text-light);
+  line-height: 1.75rem;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.btn {
+  padding: 1rem 2rem;
+  outline: none;
+  border: 3px solid #000000;
+  font-size: 2rem;
+  color: var(--black);
+  background: transparent;
+  border-radius: 5px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: var(--primary-color-white);
+  box-shadow: 2px 2px 10px rgba(255, 226, 226, 0.5);
+}
+
+.logo {
+  font-size: 3.5rem;
+  font-weight: 700;
+  color: var(--primary-color);
+  display: flex;
+}
+
+
+.logo span {
+  color: #000000;
+}
+
+img {
+  display: flex;
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+ul {
+  list-style: none;
+}
+
+html,
+body {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+nav {
+  position: fixed;
+  isolation: isolate;
+  width: 100%;
+  max-width: var(--max-width);
+  margin-inline: auto;
+  z-index: 9;
+}
+
+.nav__header {
+  padding: 1rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: var(--extra-light);
+}
+
+.nav__menu__btn {
+  font-size: 1.5rem;
+  color: var(--text-dark);
+  cursor: pointer;
+}
+
+.nav__links {
+  position: absolute;
+  top: 65px;
+  left: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 4rem;
+  padding: 2rem;
+  background-color: var(--extra-light);
+  transition: 0.5s;
+  z-index: -1;
+  transform: translateY(-100%);
+}
+
+.nav__links.open {
+  transform: translateY(0);
+}
+
+.nav__links a {
+  font-weight: 500;
+  color: var(--text-dark);
+}
+
+.nav__links a:hover {
+  color: var(--primary-color);
+}
+
+.header__container {
+  position: relative;
+  isolation: isolate;
+  overflow: hidden;
+}
+
+.header__container h2 {
+  max-width: fit-content;
+  margin-inline: auto;
+  margin-bottom: 1rem;
+  padding: 0.5rem 1rem;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 4.9rem;
+  font-weight: 700;
+  color: #080301;
+ 
+  border-radius: 5rem;
+}
+
+.header__container h2 img {
+  max-width: 25px;
+}
+
+.header__container h1 {
+  margin-bottom: 1rem;
+  font-size: 6rem;
+  font-weight: 700;
+  color: var(--text-dark);
+  text-align: center;
+  line-height: 5.5rem;
+}
+
+.header__container h1 span {
+  color: var(--primary-color);
+}
+
+.header__container p {
+  margin-bottom: 2rem;
+  max-width: 600px;
+  margin-inline: auto;
+  color: var(--text-light);
+  line-height: 2rem;
+  text-align: center;
+}
+
+.header__btns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.header__btns a {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  font-size: 0.5rem;
+  font-weight: 500;
+  color: var(--text-dark);
+}
+
+.header__btns a span {
+  padding: 5px 11px;
+  font-size: 1.5rem;
+  color: var(--white);
+  background-color: var(--primary-color);
+  border-radius: 100%;
+  transition: 0.3s;
+}
+
+.header__btns a:hover span {
+  box-shadow: white;
+}
+
+.header__container > img {
+  position: absolute;
+  max-width: 40px;
+  padding: 7px;
+  border-radius: 100%;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: -1;
+}
+
+.header__container > img:nth-child(1) {
+  top: 30%;
+  left: 20%;
+  transform: translate(-50%, -50%);
+}
+
+.header__container > img:nth-child(2) {
+  top: 50%;
+  left: 1rem;
+  transform: translateY(-50%);
+}
+
+.header__container > img:nth-child(3) {
+  top: 75%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+}
+
+.header__container > img:nth-child(4) {
+  top: 20%;
+  right: 15%;
+  transform: translate(-50%, -50%);
+}
+
+.header__container > img:nth-child(5) {
+  top: 50%;
+  left: 1rem;
+  transform: translateY(-50%);
+}
+
+.header__container > img:nth-child(6) {
+  top: 65%;
+  right: 20%;
+  transform: translate(-50%, -50%);
+}
+
+
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+
+body {
+    font-family: "Poppins", sans-serif;
+    padding: 50px;
+    --max-width: 1200px;
+}  
+
+
+
+
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 }
-
-.container{
-    background-color: rgb(255, 255, 255);
-    min-height: 100vh;
-    width: 100%;
-    padding: 23px 0;
-}
-
-.container h1{
-    text-align: center;
-    margin-bottom: 23px;
-    color: #000000;
-}
-
-.price-row{
+.wrapper{
+    font-family: "Poppins", sans-serif;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #fafafa;
 }
+.wrapper h1{
+    font-size: 3em;
 
-.box{
-    margin: 0px 12px;
-    text-align: center;
-    background: linear-gradient(262.63deg, #FE9A1A 0%, #FF1E74 100%);
-    color: #fff;
-    border-radius: 17px;
-    padding: 0 12px;
+    margin: 25px;
 }
-
-.box h2{
-    margin: 27px 0 23px;
+.content-box{
+    display: flex;
+   
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 1000px;
+    margin-top: 30px;
 }
-
-.box ul{
-    list-style: none;
-    color: #ddd;
-    text-align: left;
-    margin: 20px 0;
-}
-
-.box ul li{
-    padding: 9px 63px;
-}
-
-.box ul li::before{
-    content: '\2022';
-    color: #e33058;
-    font-weight: bold;
-    margin-right: 8px;
-}
-
-.box .btn{
-    font-size: 16px;
-    margin: 23px 23px;
-    border: 2px solid #962020;
-    padding: 12px 0px;
+.card{
+    min-height: 200px;
+    border: 3px solid #000000;
+    width: 320px;
+    padding: 30px;
     border-radius: 5px;
-    margin: 25px 35px 25px 35px;
-    transition: all 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #fff;
+    margin: 10px 4px;
+    box-shadow: 0px 15px 30px rgba(0,0,0,0.2);
+}
+.card i{
+    margin: 20px;
+    color: #581ed6;
+}
+.card h2{
+    color: #000000;
+    margin-bottom: 12px;
+    font-weight: 800;
+    text-align: center;
+}
+.card p{
+    color: #000000;
+    text-align: center;
 }
 
-.box .btn:hover{
-    background-color: #c50e0e;
-    cursor: pointer;
-}
-.box span{
-    font-size: 16px;
-}
 
-@media only screen and (max-width: 1000px){
-    .price-row{
-        flex-wrap: wrap;
+@media(max-width:991px){
+    .wrapper{
+        padding: 25px;
     }
-
-    .box{
-        margin: 12px 23px;
+    .wrapper h1{
+        font-size: 2.5em;
+        font-weight: 600;
+    }
+    .content-box{
+        flex-direction: column;
+        width: 100%;
+    }
+    .card{
+        min-width: 300px;
+        margin: 10px auto;
     }
 }
