--- a/services.css
+++ b/services.css
@@ -4,11 +4,10 @@
   --primary-color:  #000000;
   --primary-color-dark: rgba(0, 0, 0, 0.5);
   --text-dark: #000000;
-  --text-light: #737373;
-  --extra-light: #e5e5e5;
+  --text-light: #000000;
+  --extra-light: #000000;
   --white: #ffffff;
-  --max-width: 1000px;
-  
+  --max-width: 1200px;
 }
 
 * {
@@ -21,12 +20,10 @@
   max-width: var(--max-width);
   margin: auto;
   padding: 5rem 1rem;
-  padding: 10px;
 }
 
 .section__header {
-  max-width: 800px;
-  padding: 35px;
+  max-width: 900px;
   margin-inline: auto;
   margin-bottom: 1rem;
   font-size: 4.5rem;
@@ -53,18 +50,18 @@
 .btn {
   padding: 1rem 2rem;
   outline: none;
-  border: none;
+  border: 3px solid #000000;
   font-size: 2rem;
-  color: var(--white);
-  background-color: var(--primary-color);
+  color: var(--black);
+  background: transparent;
   border-radius: 5px;
   transition: 0.3s;
   cursor: pointer;
 }
 
 .btn:hover {
-  background-color: var(--primary-color-dark);
-  box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.5);
+  background-color: var(--primary-color-white);
+  box-shadow: 2px 2px 10px rgba(255, 226, 226, 0.5);
 }
 
 .logo {
@@ -96,7 +93,6 @@ ul {
 html,
 body {
   scroll-behavior: smooth;
-  
 }
 
 body {
@@ -230,7 +226,7 @@ nav {
 }
 
 .header__btns a:hover span {
-  box-shadow: 2px 2px 10px rgba(5, 3, 1, 0.5);
+  box-shadow: white;
 }
 
 .header__container > img {
@@ -280,23 +276,100 @@ nav {
 
 
 
+
+
+  
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background: #f2f2f2;
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+.logos {
+  overflow: hidden;
+  padding: 50px 0;
+  background: white;
+  white-space: nowrap;
+  position: relative;
+}
+
+.logos:before,
+.logos:after {
+  position: absolute;
+  top: 0;
+  width: 250px;
+  height: 100%;
+  content: "";
+  z-index: 2;
+}
+
+.logos:before {
+  left: 0;
+  background: linear-gradient(to left, rgba(255, 255, 255, 0), white);
+}
+
+.logos:after {
+  right: 0;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), white);
+}
+
+.logos:hover .logos-slide {
+  animation-play-state: paused;
+}
+
+.logos-slide {
+  display: inline-block;
+  animation: 15s slide infinite linear;
+}
+
+.logos-slide img {
+  height: 50px;
+  margin: 0 40px;
+}
+
+
+
+
+
+
+
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+ 
 
 
 *{
     margin: 0;
-    padding: 0;
+    padding: 1000;
     box-sizing: border-box;
 }
+ 
 .wrapper{
     font-family: 'poppins',sans-serif;
     display: flex;
+    padding: 70px;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     background: #fafafa;
 }
 .wrapper h1{
+  
     font-size: 3em;
     color: #000000;
     margin: 25px;
@@ -306,21 +379,31 @@ nav {
     justify-content: space-between;
     flex-wrap: wrap;
     width: 1000px;
-    margin-top: 25px;
+    margin-top: 30px;
     
 }
 .card{
     min-height: 220px;
     width: 320px;
-    padding: 30px;
+    padding: 10px;
     border-radius: 5px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    text-align: left;
     flex-direction: column;
     background: #fff;
     margin: 10px 4px;
     box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2);
+}
+.icon {
+  width: 80px;
+  height: 80px;
+  margin-bottom: 15px;
+}
+
+.icon img {
+  width: 100%;
+  height: auto;
 }
 .card i{
     margin: 20px;
@@ -343,6 +426,13 @@ nav {
     
 }
 
+
+
+
+
+
+
+
 @media(max-width:991px){
     .wrapper{
         padding: 25px;
@@ -360,3 +450,233 @@ nav {
         margin: 10px auto;
     }
 }
+
+
+.offer__grid {
+  margin-top: 4rem;
+  display: grid;
+  gap: 2rem 1rem;
+}
+
+.offer__card img {
+  margin-bottom: 1rem;
+  border-radius: 5px;
+}
+
+.offer__details {
+  display: flex;
+  align-items: flex-start;
+}
+
+.offer__details span {
+  font-size: 2rem;
+  font-weight: 800;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 1px var(--text-dark);
+  padding-right: 1rem;
+}
+
+.offer__details div {
+  padding-left: 1rem;
+  border-left: 2px solid var(--primary-color);
+}
+
+.offer__details h4 {
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: var(--text-dark);
+}
+
+.offer__details p {
+  color: var(--text-light);
+}
+
+.swiper {
+  padding-top: 4rem;
+  width: 100%;
+  max-width: 600px;
+}
+
+.client__card img {
+  max-width: 80px;
+  margin-inline: auto;
+  margin-bottom: 2rem;
+  border-radius: 100%;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.client__card p {
+  margin-bottom: 1rem;
+  line-height: 1.75rem;
+  color: var(--text-dark);
+  text-align: center;
+}
+
+.client__ratings {
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+.client__ratings span {
+  color: rgb(0, 0, 0);
+}
+
+.client__card h4 {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: var(--text-dark);
+  text-align: center;
+}
+
+.client__card h5 {
+  font-size: 1rem;
+  font-weight: 500;
+  color: var(--text-light);
+  text-align: center;
+}
+
+.footer__container {
+  display: grid;
+  gap: 4rem 2rem;
+}
+
+.footer__logo {
+  margin-bottom: 2rem;
+}
+
+.footer__col p {
+  max-width: 400px;
+  color: var(--text-light);
+}
+
+.footer__col h4 {
+  margin-bottom: 2rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: var(--text-dark);
+}
+
+.footer__links {
+  display: grid;
+  gap: 1rem;
+}
+
+.footer__links a {
+  color: var(--text-light);
+}
+
+.footer__links a:hover {
+  color: var(--primary-color);
+}
+
+.footer__links a span {
+  font-size: 1.25rem;
+}
+
+.footer__bar {
+  padding: 1rem;
+  font-size: 0.9rem;
+  color: var(--text-light);
+  text-align: center;
+}
+
+@media (width > 540px) {
+  .steps__grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .explore__grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .job__grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .offer__grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .footer__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (width > 768px) {
+  nav {
+    position: static;
+    padding: 2rem 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
+  }
+
+  .nav__header {
+    padding: 0;
+    background-color: transparent;
+  }
+
+  .nav__menu__btn {
+    display: none;
+  }
+
+  .nav__links {
+    position: static;
+    padding: 0;
+    flex-direction: row;
+    justify-content: flex-end;
+    background-color: transparent;
+    transform: none;
+  }
+
+  .steps__grid {
+    margin-top: 6rem;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .steps__card:nth-child(2n - 1) {
+    transform: translateY(-2rem);
+  }
+
+  .explore__grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .job__grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .offer__grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .footer__container {
+    grid-template-columns: repeat(5, 1fr);
+  }
+
+  .footer__col:nth-child(1) {
+    grid-column: 1/3;
+  }
+}
+
+@media (width > 1024px) {
+  .steps__card {
+    padding: 1.5rem;
+  }
+
+  .explore__card {
+    padding: 1.5rem;
+  }
+
+  .offer__grid {
+    gap: 2rem;
+  }
+}
+
+
+
+
