--- a/price.css
+++ b/price.css
@@ -7,7 +7,7 @@
   --text-light: #000000;
   --extra-light: #000000;
   --white: #ffffff;
-  --max-width: 100px;
+  --max-width: 1200px;
 }
 
 * {
@@ -390,13 +390,22 @@ body {
     border-radius: 5px;
     display: flex;
     justify-content: center;
-    text-align: center;
+    text-align: left;
     flex-direction: column;
     background: #fff;
     margin: 10px 4px;
     box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2);
 }
+.icon {
+  width: 80px;
+  height: 80px;
+  margin-bottom: 15px;
+}
 
+.icon img {
+  width: 100%;
+  height: auto;
+}
 .card i{
     margin: 20px;
     color: #070403;
@@ -419,7 +428,51 @@ body {
 }
 
 
-
+.Touch {
+  min-height: 200px;
+  border: 3px solid #000;
+  width: 320px;
+  padding: 30px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #000;
+  margin: 10px 4px;
+  box-shadow: 0px 15px 30px rgba(0,0,0,0.2);
+  text-align: center;
+}
+.Touch h2 {
+  color: #fff;
+  margin-bottom: 12px;
+  font-weight: 800;
+}
+.btn {
+  padding: 1rem 2rem;
+  outline: none;
+  border: 3px solid #fff9f9;
+  font-size: 2rem;
+  background: transparent;
+  border-radius: 5px;
+  transition: 0.3s;
+  cursor: pointer;
+  color: #fff;
+}
+.btn:hover {
+  background-color: rgba(0,0,0,0.7);
+  box-shadow: 2px 2px 10px rgba(255,241,241,0.5);
+}
+@media (max-width: 991px) {
+  .content-box {
+    flex-direction: column;
+    width: 100%;
+  }
+  .card {
+    min-width: 300px;
+    margin: 10px auto;
+  }
+}
 
 
 
