--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   --primary-color-dark: rgba(0, 0, 0, 0.5);
   --text-dark: #000000;
   --text-light: #000000;
-  --extra-light: #000000;
+  --extra-light: #88A5BC;
   --white: #ffffff;
   --max-width: 1200px;
 }
@@ -61,7 +61,7 @@
 
 .btn:hover {
   background-color: var(--primary-color-white);
-  box-shadow: 2px 2px 10px rgba(255, 226, 226, 0.5);
+  box-shadow: 2px 2px 10px #88A5BC;
 }
 
 .logo {
@@ -226,7 +226,7 @@ nav {
 }
 
 .header__btns a:hover span {
-  box-shadow: white;
+  box-shadow: #ffffff;
 }
 
 .header__container > img {
@@ -386,7 +386,7 @@ body {
   flex-direction: column;
   background: #fff;
   margin: 10px 4px;
-  box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 15px 25px #88A5BC;
 }
 .icon {
 width: 80px;
