--- a/styles.css
+++ b/styles.css
@@ -347,7 +347,7 @@ body {
 
 
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"');
 
 
 *{
@@ -356,7 +356,7 @@ body {
     box-sizing: border-box;
 }
 .wrapper{
-    font-family: 'poppins',sans-serif;
+    font-family: "Montserrat", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
