--- a/price.css
+++ b/price.css
@@ -1,7 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-  font-family: "Montserrat", sans-serif;
   --primary-color:  #000000;
   --primary-color-dark: rgba(0, 0, 0, 0.5);
   --text-dark: #000000;
@@ -370,7 +369,7 @@ body {
     background: #fafafa;
 }
 .wrapper h1{
-    padding:10px;
+  
     font-size: 3em;
     color: #000000;
     margin: 25px;
